--- a/src/pages/EmployeeList/style.css
+++ b/src/pages/EmployeeList/style.css
@@ -20,3 +20,9 @@ table {
     background-color: #04AA6D;
     color: white;
   }
+  .row-size-dropdown{
+    width: max-content;
+    
+    
+  }
+ 
